--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
